// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserDetailsPanel/> no principal 1`] = `
<div>
  <div
    class="panel panel-default user-details-panel"
  >
    <div
      class="panel-heading"
    >
      User Details
    </div>
    <div
      class="panel-body"
    >
      <div>
        No user selected.
      </div>
    </div>
  </div>
</div>
`;

exports[`<UserDetailsPanel/> unknown user props 1`] = `
<div>
  <div
    class="panel panel-default user-details-panel"
  >
    <div
      class="panel-heading"
    >
      <span>
        TestDisplayName
      </span>
    </div>
    <div
      class="panel-body"
    >
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Email
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          unknown
        </div>
      </div>
      <hr
        class="principal-hr"
      />
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Last Login
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          unknown
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Created
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          unknown
        </div>
      </div>
      <hr
        class="principal-hr"
      />
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          User ID
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          1234
        </div>
      </div>
      <hr
        class="principal-hr"
      />
      <button
        class="pull-right btn btn-default"
        style="margin-left: 10px;"
        type="button"
      >
        Delete
      </button>
      <button
        class="pull-right btn btn-default"
        style="margin-left: 10px;"
        type="button"
      >
        Reactivate
      </button>
    </div>
  </div>
</div>
`;

exports[`<UserDetailsPanel/> with principal and buttons 1`] = `
<div>
  <div
    class="panel panel-default user-details-panel"
  >
    <div
      class="panel-heading"
    >
      <span>
        cnathe
      </span>
    </div>
    <div
      class="panel-body"
    >
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Email
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          cnathe@labkey.com
        </div>
      </div>
      <hr
        class="principal-hr"
      />
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Last Login
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          2020-01-06 15:30
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Created
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          2017-05-08 08:43
        </div>
      </div>
      <hr
        class="principal-hr"
      />
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          User ID
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          1004
        </div>
      </div>
      <hr
        class="principal-hr"
      />
      <button
        class="pull-right btn btn-default"
        style="margin-left: 10px;"
        type="button"
      >
        Delete
      </button>
      <button
        class="pull-right btn btn-default"
        style="margin-left: 10px;"
        type="button"
      >
        Reactivate
      </button>
    </div>
  </div>
</div>
`;

exports[`<UserDetailsPanel/> with principal and buttons not allowDelete or allowResetPassword 1`] = `
<div>
  <div
    class="panel panel-default user-details-panel"
  >
    <div
      class="panel-heading"
    >
      <span>
        cnathe
      </span>
    </div>
    <div
      class="panel-body"
    >
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Email
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          cnathe@labkey.com
        </div>
      </div>
      <hr
        class="principal-hr"
      />
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Last Login
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          2020-01-06 15:30
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Created
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          2017-05-08 08:43
        </div>
      </div>
      <hr
        class="principal-hr"
      />
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          User ID
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          1004
        </div>
      </div>
      <hr
        class="principal-hr"
      />
      <button
        class="pull-right btn btn-default"
        style="margin-left: 10px;"
        type="button"
      >
        Reactivate
      </button>
    </div>
  </div>
</div>
`;

exports[`<UserDetailsPanel/> with principal no buttons because of self 1`] = `
<div>
  <div
    class="panel panel-default user-details-panel"
  >
    <div
      class="panel-heading"
    >
      <span>
        ReaderDisplayName
      </span>
      <span
        class="margin-left status-pill active"
      >
        Active
      </span>
    </div>
    <div
      class="panel-body"
    >
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Name
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          test1 test2
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Email
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          reader_email_address_might_be_long@localhost.test
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Description
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          This is my user description of what I do for the company. Isn't it really interesting?
        </div>
      </div>
      <hr
        class="principal-hr"
      />
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Last Login
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          2019-11-18 09:15
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Created
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          2017-10-27 11:34
        </div>
      </div>
      <hr
        class="principal-hr"
      />
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          User ID
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          4973
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Has Password
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          true
        </div>
      </div>
      <hr
        class="principal-hr"
      />
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Effective Roles
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          <ul
            class="principal-detail-ul"
          >
            <li
              class="principal-detail-li"
            >
              <a
                href="#/admin/permissions?expand=Editor"
              >
                Editor
              </a>
            </li>
            <li
              class="principal-detail-li"
            >
              <a
                href="#/admin/permissions?expand=Folder%20Administrator"
              >
                Folder Administrator
              </a>
            </li>
            <li
              class="principal-detail-li"
            >
              <a
                href="#/admin/permissions?expand=Project%20Administrator"
              >
                Project Administrator
              </a>
            </li>
            <li
              class="principal-detail-li"
            >
              <a
                href="#/admin/permissions?expand=Reader"
              >
                Reader
              </a>
            </li>
            <li
              class="principal-detail-li"
            >
              <a
                href="#/admin/permissions?expand=Restricted%20Reader"
              >
                Restricted Reader
              </a>
            </li>
            <li
              class="principal-detail-li"
            >
              <a
                href="#/admin/permissions?expand=Submitter"
              >
                Submitter
              </a>
            </li>
          </ul>
        </div>
      </div>
      <hr
        class="principal-hr"
      />
      <div
        class="row"
      >
        <div
          class="col-xs-4 principal-detail-label"
        >
          Groups
        </div>
        <div
          class="col-xs-8 principal-detail-value"
        >
          <ul
            class="principal-detail-ul"
          >
            <li
              class="principal-detail-li"
            >
              None
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
